=== v0.2.19 ===
- Add Pool
- Upgrade electrs to v0.8.6
- Upgrade Specter to v0.10.1
- Upgrade Thunderhub to v0.10.5

=== v0.2.18 ===
- Upgrade LND to v0.11.1
- Upgrade Loop to v0.9.0
- Upgrade RTL to v0.9.3
- Upgrade Thunderhub to v0.10.1
- Upgrade Specter to v0.9.2
- Upgrade BTCPayServer to v1.0.5.9
- Upgrade Mempool to v1.0.1
- Add re-install option for BTCPayServer
- Bug fixes

=== v0.2.17 ===
- Major UI Update
- Upgrade Dojo to v1.8.0
- Upgrade Thunderhub to v0.9.15
- Upgrade Specter to v0.8.1
- Bug Fixes

=== v0.2.16 ===
- Upgrade Caravan to v0.3.3 
- Upgrade Joinmarket to v0.7.0
- Upgrade Specter to v0.7.2
- Upgrade Thunderhub to v0.9.8
- Upgrade RTL to v0.9.0
- Upgrade Whirlpool to v0.10.8
- Add foundation for improved app management
- Generate Bitcoin config based on total RAM
- Improve finding initial Bitcoin peers
- Add detection for undervoltage, throttling, and capping on Raspi devices
- Fix issue where status page may not load if no drive is found
- Fix issue with VM drive detection

=== v0.2.15 ===
- Upgrade LND to v0.11.0
- Upgrade Loop to v0.8.0
- Improve UI on Bitcoin CLI Page
- Use NGINX for Electrum Server port 50002
- Improve Desktop UI when using a VM or monitor with mouse/keyboard
- Bug fixes

=== v0.2.14 ===
- Update Bitcoin to v0.20.1
- Upgrade Specter to v0.6.0
- Upgrade Thunderhub to v0.9.0
- Upgrade RTL to v0.8.3
- Add NGINX for HTTPS
- Add HTTPS for rtl, thunderhub, lnbits, lndhub, and btc rpc explorer
- Bug fixes and refactoring

=== v0.2.13 ===
- Upgrade Caravan to v0.3.2
- Upgrade RTL to v0.8.2
- Bug fixes and refactoring

=== v0.2.12 ===
- Add Thunderhub v0.8.13
- Upgrade Specter to v0.5.5
- Decrease CPU usage when electrum wallet is using myNode
- Use gunicorn for HTTPS
- Add tor service for lnbits, caravan, and specter
- Fix serial on RockPro64 devices
- Move RTL settings to external drive
- Various UI improvements
- Bug fixes

=== v0.2.11 ===
- Update electrs to v0.8.5
- Add Specter Desktop v0.5.2
- Upgrade LND to v0.10.3